# indi-device-watchdog

./: CMakeLists.txt  README.md  TODO  VERSION
.github/workflows/: cmake.yml
doc/: indi-device-watchdog-overview.odp
resources/: indi_devices.json
source/: CMakeLists.txt
source/indi-device-watchdog/: CMakeLists.txt  device_data.cpp  device_data.h  device_data_persistance.cpp  device_data_persistance.h  enum_helper.h  indi_auto_connector.cpp  indi_auto_connector.h  indi_client.cpp  indi_client.h  indi_device_watchdog.cpp  indi_device_watchdog.h  indi_devices.json  indi_driver_restart_manager.cpp  indi_driver_restart_manager.h  indi_server_connection_state.h  logging.cpp  logging.h  main.cpp  option_level.h  wait_for.h
